--- a/docs/music/styles/main.css
+++ b/docs/music/styles/main.css
@@ -44,4 +44,9 @@ h5 {
 .brand-logo {
   padding-left: 10px !important;
 }
+
+.mybg {
+  background-color: #202124 !important;
+  color: #a9a9a9 !important;
+}
 /*# sourceMappingURL=main.css.map */
