--- a/docs/music/styles/main.scss
+++ b/docs/music/styles/main.scss
@@ -44,3 +44,8 @@ h5 {
 .brand-logo {
     padding-left: 10px !important;
 }
+
+.mybg {
+    background-color: #202124 !important;
+    color: #a9a9a9 !important;
+}
