--- a/docs/music/styles/main.scss
+++ b/docs/music/styles/main.scss
@@ -5,6 +5,47 @@
     z-index: 999;
 }
 
+.playerControls {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    z-index: 999;
+    background-color: #3f3f3f;
+    opacity: 0.7;
+}
+
+.playerControls>i:nth-child(1) {
+    position: relative;
+    margin: 10px;
+    margin-top: 5px;
+    padding: 2px;
+    &:hover {
+        color: #000000;
+    }
+}
+
+input[type="range"] {
+    border: none !important;
+}
+
+.progress-bar-spent {
+    position: absolute;
+    bottom: -23px;
+    left: 50px;
+    right: 100px;
+    border: none !important;
+}
+
+.length {
+    position: absolute;
+    float: right;
+    color: white;
+    margin: 10px;
+    bottom: 0px;
+    right: 10px;
+}
+
 .song {
     width: 100%;
 }
