--- a/docs/script/css/poep.css
+++ b/docs/script/css/poep.css
@@ -1,3 +1,22 @@
+#toitoi {
+    position: fixed;
+    right: 10px;
+    top: 10vh;
+    animation: toitoi 1s linear infinite;
+    padding: 0;
+    margin: 0;
+}
+
+#toitoi span {
+    font-size: 10vh;
+    -webkit-transform: rotate(270deg) !important;
+    -moz-transform: rotate(270deg) !important;
+    -o-transform: rotate(270deg) !important;
+    -ms-transform: rotate(270deg) !important;
+    transform: rotate(270deg) !important;
+    display: block !important;
+}
+
 body[theme="dark"] .c8,
 body[theme="dark"] .c18,
 body[theme="dark"] .brand-logo {
@@ -566,6 +585,16 @@ h6 {
 @keyframes blinker {
     50% {
         box-shadow: -5px 0px 0px 0px transparent;
+    }
+}
+
+@keyframes toitoi {
+    0% {
+        transform: translateY(100vh);
+    }
+
+    100% {
+        transform: translateY(-100vh);
     }
 }
 
