--- a/docs/script/css/poep.css
+++ b/docs/script/css/poep.css
@@ -614,3 +614,16 @@ h6 {
         /* overflow: hidden !important; */
     }
 }
+
+/* 
+body:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none !important;
+    background-image: linear-gradient(to bottom,
+            rgba(255, 255, 255, 0),
+            rgba(255, 255, 255, 1) 90%) !important;
+} */
