--- a/docs/script/css/poep.css
+++ b/docs/script/css/poep.css
@@ -17,8 +17,14 @@
     display: block !important;
 }
 
+#currentSceneText {
+    text-transform: capitalize;
+    font-weight: 300 !important;
+}
+
 #currentScene {
     margin-left: 1rem;
+    font-weight: bold;
 }
 
 #scrollspy {
@@ -71,6 +77,7 @@ body[embed="true"] {
     width: calc(100vw - 30px) !important;
     padding: 0 !important;
     margin: 0 !important;
+    background-color: transparent !important;
     /* overflow: hidden !important; */
 }
 
@@ -80,6 +87,15 @@ body[embed="true"] .c24 {
     padding: 0 !important;
     margin: 20px !important;
     /* overflow: hidden !important; */
+}
+
+body[embed="true"] .c19 {
+    color: black !important;
+}
+
+
+body[embed="true"] #scrollspy {
+    display: none !important;
 }
 
 body[embed="true"] span {
@@ -633,6 +649,9 @@ h6 {
         padding: 0 !important;
         margin: 20px !important;
         /* overflow: hidden !important; */
+    }
+    #currentScene {
+        display: none !important;
     }
 }
 
