--- a/docs/script/css/poep.css
+++ b/docs/script/css/poep.css
@@ -31,6 +31,7 @@
     position: fixed;
     right: 3vw;
     top: 50vh;
+    /* width: 230px; */
     transform: translateY(-50%);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
     text-transform: capitalize;
