--- a/docs/script/css/poep.css
+++ b/docs/script/css/poep.css
@@ -37,6 +37,12 @@
     text-transform: capitalize;
 }
 
+.exclude, .exclude * {
+    text-decoration: line-through !important;
+    text-decoration-color: red !important;
+    color: red !important;
+}
+
 .table-of-contents a:hover {
     border-left-color: rgb(133, 53, 184) !important;
 }
