--- a/docs/script/css/doc.css
+++ b/docs/script/css/doc.css
@@ -617,8 +617,8 @@ table th {
 
 .c24 {
     background-color: #ffffff;
-    max-width: 453.6pt;
-    padding: 70.8pt 70.8pt 70.8pt 70.8pt
+    /* max-width: 453.6pt; */
+    padding: 30pt 30pt 30pt 30pt
 }
 
 .c17 {
