--- a/docs/script/css/main.css
+++ b/docs/script/css/main.css
@@ -632,3 +632,14 @@ h6 {
 :target {
     display: block
 }
+
+.comment{
+    right: 80px;
+    position: absolute;
+    padding: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 10%;
+    background-color: #3f3f3f;
+    color: white;
+}
