--- a/docs/script/css/doc.css
+++ b/docs/script/css/doc.css
@@ -1,5 +1,4 @@
-/* @import url('https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLUXza5VhXqVC6o75Eld_V98');
-
+@import url('https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLUXza5VhXqVC6o75Eld_V98');
 .lst-kix_list_1-3>li:before {
     content: "\0025cf  "
 }
@@ -88,401 +87,30 @@ ol {
 table td,
 table th {
     padding: 0
-}
-
-.c19 {
-    background-color: #ffffff;
-    color: #222222;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 10.5pt;
-    font-family: "Arial";
-    font-style: normal
-}
-
-.c20 {
-    background-color: #ffffff;
-    color: #222222;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 13.5pt;
-    font-family: "Arial";
-    font-style: normal
-}
-
-.c9 {
-    color: #000000;
-    font-weight: 700;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: italic
-}
-
-.c3 {
-    color: #000000;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: normal
-}
-
-.c5 {
-    color: #000000;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: italic
-}
-
-.c4 {
-    color: #000000;
-    font-weight: 700;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: normal
-}
-
-.c13 {
-    padding-top: 0pt;
-    padding-bottom: 8pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-.c10 {
-    padding-top: 0pt;
-    padding-bottom: 8pt;
-    line-height: 1.0791666666666666;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-.c0 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: justify
-}
-
-.c1 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-.c18 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: center
-}
-
-.c22 {
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: super;
-    font-size: 11pt;
-    font-family: "Calibri"
-}
-
-.c16 {
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 18pt;
-    font-family: "Calibri";
-    font-style: normal
-}
-
-.c21 {
-    background-color: #ffffff;
-    max-width: 453.6pt;
-    padding: 70.8pt 70.8pt 70.8pt 70.8pt
-}
-
-.c14 {
-    margin-left: 36pt;
-    padding-left: 0pt
-}
-
-.c7 {
-    padding: 0;
-    margin: 0
-}
-
-.c8 {
-    color: inherit;
-    text-decoration: inherit
 }
 
 .c11 {
-    background-color: #ffff00
-}
-
-.c6 {
-    background-color: #ff0000
-}
-
-.c17 {
+    background-color: #ffffff;
+    color: #222222;
+    font-weight: 400;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 10.5pt;
+    font-family: "Arial";
     font-style: italic
 }
 
-.c15 {
-    color: #000000
-}
-
-.c12 {
-    font-weight: 700
-}
-
-.c2 {
-    height: 11pt
-}
-
-.title {
-    padding-top: 24pt;
+.c1 {
     color: #000000;
-    font-weight: 700;
-    font-size: 36pt;
-    padding-bottom: 6pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-.subtitle {
-    padding-top: 18pt;
-    color: #666666;
-    font-size: 24pt;
-    padding-bottom: 4pt;
-    font-family: "Georgia";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    font-style: italic;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-li {
-    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    vertical-align: baseline;
     font-size: 11pt;
-    font-family: "Calibri"
-}
-
-p {
-    margin: 0;
-    color: #000000;
-    font-size: 11pt;
-    font-family: "Calibri"
-}
-
-h1 {
-    padding-top: 24pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 24pt;
-    padding-bottom: 6pt;
     font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
+    font-style: italic
 }
 
-h2 {
-    padding-top: 18pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 18pt;
-    padding-bottom: 4pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-h3 {
-    padding-top: 14pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 14pt;
-    padding-bottom: 4pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-h4 {
-    padding-top: 12pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 12pt;
-    padding-bottom: 2pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-h5 {
-    padding-top: 11pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 11pt;
-    padding-bottom: 2pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-h6 {
-    padding-top: 10pt;
-    color: #000000;
-    font-weight: 700;
-    font-size: 10pt;
-    padding-bottom: 2pt;
-    font-family: "Calibri";
-    line-height: 1.0791666666666666;
-    page-break-after: avoid;
-    orphans: 2;
-    widows: 2;
-    text-align: left
-}
-
-
-
-
-
- */
-
-@import url('https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLUXza5VhXqVC6o75Eld_V98');
-
-.lst-kix_list_1-3>li:before {
-    content: "\0025cf  "
-}
-
-.lst-kix_list_1-4>li:before {
-    content: "\0025cf  "
-}
-
-ol.lst-kix_list_1-0.start {
-    counter-reset: lst-ctn-kix_list_1-0 0
-}
-
-.lst-kix_list_1-0>li {
-    counter-increment: lst-ctn-kix_list_1-0
-}
-
-ol.lst-kix_list_1-0 {
-    list-style-type: none
-}
-
-.lst-kix_list_1-7>li:before {
-    content: "\0025cf  "
-}
-
-.lst-kix_list_1-5>li:before {
-    content: "\0025cf  "
-}
-
-.lst-kix_list_1-6>li:before {
-    content: "\0025cf  "
-}
-
-ul.lst-kix_list_1-3 {
-    list-style-type: none
-}
-
-.lst-kix_list_1-0>li:before {
-    content: ""counter(lst-ctn-kix_list_1-0, decimal) ". "
-}
-
-ul.lst-kix_list_1-4 {
-    list-style-type: none
-}
-
-.lst-kix_list_1-8>li:before {
-    content: "\0025cf  "
-}
-
-ul.lst-kix_list_1-1 {
-    list-style-type: none
-}
-
-ul.lst-kix_list_1-2 {
-    list-style-type: none
-}
-
-ul.lst-kix_list_1-7 {
-    list-style-type: none
-}
-
-.lst-kix_list_1-1>li:before {
-    content: "\0025cf  "
-}
-
-.lst-kix_list_1-2>li:before {
-    content: "\0025cf  "
-}
-
-ul.lst-kix_list_1-8 {
-    list-style-type: none
-}
-
-ul.lst-kix_list_1-5 {
-    list-style-type: none
-}
-
-ul.lst-kix_list_1-6 {
-    list-style-type: none
-}
-
-ol {
-    margin: 0;
-    padding: 0
-}
-
-table td,
-table th {
-    padding: 0
-}
-
-.c21 {
-    background-color: #ffffff;
+.c27 {
     color: #222222;
     font-weight: 400;
     text-decoration: none;
@@ -492,58 +120,7 @@ table th {
     font-style: normal
 }
 
-.c25 {
-    background-color: #ffffff;
-    color: #222222;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 10.5pt;
-    font-family: "Arial";
-    font-style: normal
-}
-
-.c1 {
-    color: #000000;
-    font-weight: 700;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: normal
-}
-
-.c2 {
-    color: #000000;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: normal
-}
-
-.c8 {
-    color: #000000;
-    font-weight: 700;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: italic
-}
-
-.c5 {
-    color: #000000;
-    font-weight: 400;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 11pt;
-    font-family: "Calibri";
-    font-style: italic
-}
-
-.c3 {
+.c4 {
     padding-top: 0pt;
     padding-bottom: 0pt;
     line-height: 1.0;
@@ -553,34 +130,37 @@ table th {
     height: 11pt
 }
 
+.c12 {
+    color: #222222;
+    font-weight: 400;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 10.5pt;
+    font-family: "Arial";
+    font-style: normal
+}
+
+.c3 {
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 11pt;
+    font-family: "Calibri";
+    font-style: normal
+}
+
 .c0 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: left
+    color: #000000;
+    font-weight: 700;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 11pt;
+    font-family: "Calibri";
+    font-style: normal
 }
 
-.c9 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: justify
-}
-
-.c19 {
-    padding-top: 0pt;
-    padding-bottom: 0pt;
-    line-height: 1.0;
-    orphans: 2;
-    widows: 2;
-    text-align: center
-}
-
-.c11 {
+.c21 {
     padding-top: 0pt;
     padding-bottom: 8pt;
     line-height: 1.0;
@@ -589,13 +169,22 @@ table th {
     text-align: left
 }
 
-.c18 {
-    color: #000000;
-    text-decoration: none;
-    vertical-align: baseline;
-    font-size: 18pt;
-    font-family: "Calibri";
-    font-style: normal
+.c2 {
+    padding-top: 0pt;
+    padding-bottom: 0pt;
+    line-height: 1.0;
+    orphans: 2;
+    widows: 2;
+    text-align: left
+}
+
+.c6 {
+    padding-top: 0pt;
+    padding-bottom: 0pt;
+    line-height: 1.0;
+    orphans: 2;
+    widows: 2;
+    text-align: justify
 }
 
 .c7 {
@@ -607,7 +196,34 @@ table th {
     text-align: left
 }
 
+.c17 {
+    color: #000000;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 11pt;
+    font-family: "Calibri";
+    font-style: italic
+}
+
 .c23 {
+    color: #222222;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 10.5pt;
+    font-family: "Arial";
+    font-style: normal
+}
+
+.c22 {
+    padding-top: 0pt;
+    padding-bottom: 0pt;
+    line-height: 1.0;
+    orphans: 2;
+    widows: 2;
+    text-align: center
+}
+
+.c25 {
     font-weight: 400;
     text-decoration: none;
     vertical-align: super;
@@ -615,58 +231,68 @@ table th {
     font-family: "Calibri"
 }
 
-.c24 {
-    background-color: #ffffff;
-    /* max-width: 453.6pt; */
-    padding: 30pt 30pt 30pt 30pt
+.c28 {
+    font-weight: 400;
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 11pt;
+    font-family: "Wingdings"
 }
 
-.c17 {
-    padding: 0;
-    margin: 0
+.c26 {
+    text-decoration: none;
+    vertical-align: baseline;
+    font-size: 18pt;
+    font-family: "Calibri";
+    font-style: normal
 }
 
 .c16 {
+    background-color: #ffffff;
+    max-width: 453.6pt;
+    padding: 70.8pt 70.8pt 70.8pt 70.8pt
+}
+
+.c8 {
     color: inherit;
     text-decoration: inherit
 }
 
-.c12 {
-    background-color: #ffff00;
-    font-weight: 700
-}
-
-.c22 {
+.c13 {
     margin-left: 36pt;
     padding-left: 0pt
 }
 
 .c14 {
+    background-color: #ff00ff
+}
+
+.c9 {
     font-weight: 700
 }
 
-.c20 {
+.c5 {
+    height: 11pt
+}
+
+.c18 {
+    font-style: italic
+}
+
+.c19 {
     color: #000000
 }
 
 .c10 {
-    background-color: #ff00ff
-}
-
-.c6 {
-    background-color: #ff0000
-}
-
-.c13 {
     background-color: #ffff00
 }
 
 .c15 {
-    font-style: italic
+    background-color: #ff0000
 }
 
-.c4 {
-    height: 11pt
+.c20 {
+    background-color: #ffffff
 }
 
 .title {
@@ -792,3 +418,4 @@ h6 {
     orphans: 2;
     widows: 2;
     text-align: left
+}
